--- a/Views/Login/IndexLogin.cshtml
+++ b/Views/Login/IndexLogin.cshtml
@@ -7,15 +7,24 @@
 
 <html>
 <head>
+    <link rel="stylesheet" href="~/Content/Login/Login.css" />
     <meta name="viewport" content="width=device-width" />
     <title>Login</title>
 </head>
 <body>
-    <div>
-        <asp:LoginView runat="server">
-            <asp:LoginName runat="server"></asp:LoginName>
-            <asp:CreateUserWizard runat="server"> <WizardSteps> <asp:CreateUserWizardStep runat="server" /> <asp:CompleteWizardStep runat="server" /> </WizardSteps> </asp:CreateUserWizard>
-        </asp:LoginView>
-    </div>
+    <div class="container">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-xl-10">
+                <div class="card rounded-3 text-black">
+                    <div class="row g-0">
+                        <div class="col-lg-6">
+                            <div class="card-body p-md-5 mx-md-4">
+
+                                <div class="text-center">
+                                    <img src="~/Images/logoleitour.svg"
+                                         style="width: 185px;" alt="logo">
+                                    <h4 class="mt-1 mb-5 pb-1">Leitour</h4>
+                                </div>
+                            </div>
 </body>
 </html>
