[Add] User identification on publication/post

--- a/Views/Post/Post.cshtml
+++ b/Views/Post/Post.cshtml
@@ -88,7 +88,7 @@
                                 <img src="~/Images/Lollipop" alt="imagem do usuário" class="user-img">
                                 <div class="post-content--data">
                                     <div class="username">
-                                        <h2>Username •</h2>
+                                        <h2>@post.UserName •</h2>
                                         <h3>@@User</h3>
                                     </div>
                                     <div class="post-content">
