--- a/Views/User/Perfil.cshtml
+++ b/Views/User/Perfil.cshtml
@@ -1,15 +1,15 @@
-﻿@model List<webleitour.Container.Models.Post>
+﻿
 @{
-    ViewBag.Title = "Post";
     Layout = null;
 }
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="~/Content/Post.css" rel="stylesheet" />
+    <link href="~/Content/Perfil.css" rel="stylesheet" />
 </head>
 <body>
     <nav>
@@ -41,11 +41,11 @@
                     </div>
                 </div>
 
-                <a href="#" class="menu-feed--btn btnSelected">
+                <a href="#" class="menu-feed--btn">
                     <img src="~/Images/Feed.svg" alt="Feed imagem">
                     Feed
                 </a>
-                <a href="#" class="menu-feed--btn ">
+                <a href="#" class="menu-feed--btn btnSelected">
                     <img src="~/Images/Vector-1.svg" alt="Perfil imagem">
                     Perfil
                 </a>
@@ -72,51 +72,67 @@
             </div>
         </aside>
 
-        <section class="section-feed">
-            <form action="/" method="post">
-                <div class="post-textarea">
-                    <textarea name="feed-post" id="feed-post" class="feed-post" maxlength="250" placeholder="O que vem a sua mente?"></textarea>
-                    <button type="submit">Postar</button>
+        <section class="section-perfil">
+            <div class="perfil-user">
+                <img src="/" alt="user-pfp" class="perfil-pic">
+                <div class="perfil-content">
+                    <div class="perfil-info">
+                        <h3>@@Username</h3>
+                        <a href="#" class="btn-editprofile">Editar perfil</a>
+                    </div>
+                    <div class="perfil-info--content">
+                        <span>0</span><h4>Publicações</h4>
+                        <span>0</span><h4>Seguidores</h4>
+                        <span>0</span><h4>Seguindo</h4>
+                    </div>
+                    <div class="perfil-info--bio">
+                        <h4>Username</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
                 </div>
-            </form>
-            <div class="feed-content">
-                @foreach (var post in Model)
-                {
-                    <div class="post-box">
-                        <div class="post-box--user-content">
-                            <div class="user-content--user-info">
-                                <img src="~/Images/Lollipop" alt="imagem do usuário" class="user-img">
-                                <div class="post-content--data">
-                                    <div class="username">
-                                        <h2>@post.UserName •</h2>
-                                        <h3>@@User</h3>
-                                    </div>
-                                    <div class="post-content">
-                                        <p>@post.MessagePost</p>
-                                    </div>
-                                </div>
+            </div>
+            <div class="divbar"></div>
+            <div class="perfil-nav">
+                <a href="#">Posts</a>
+                <a href="#">Respostas</a>
+                <a href="#">Curtidas</a>
+                <a href="#">Salvos</a>
+                <a href="#">Arquivados</a>
+            </div>
+
+            <div class="post-box">
+                <div class="post-box--user-content">
+                    <div class="user-content--user-info">
+                        <img src="~/Images/Lollipop" alt="imagem do usuário" class="user-img">
+                        <div class="post-content--data">
+                            <div class="username">
+                                <h2>@@post.UserName •</h2>
+                                <h3>@@User</h3>
                             </div>
-                            <div class="post-interact">
-                                <button>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
-                                        <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
-                                    </svg>
-                                </button>
-                                <button>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-repeat" viewBox="0 0 16 16">
-                                        <path d="M11 5.466V4H5a4 4 0 0 0-3.584 5.777.5.5 0 1 1-.896.446A5 5 0 0 1 5 3h6V1.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384l-2.36 1.966a.25.25 0 0 1-.41-.192Zm3.81.086a.5.5 0 0 1 .67.225A5 5 0 0 1 11 13H5v1.466a.25.25 0 0 1-.41.192l-2.36-1.966a.25.25 0 0 1 0-.384l2.36-1.966a.25.25 0 0 1 .41.192V12h6a4 4 0 0 0 3.585-5.777.5.5 0 0 1 .225-.67Z" />
-                                    </svg>
-                                </button>
-                                <button>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
-                                    </svg>
-                                    @post.Likes
-                                </button>
+                            <div class="post-content">
+                                <p>@@post.MessagePost</p>
                             </div>
                         </div>
                     </div>
-                }
+                    <div class="post-interact">
+                        <button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
+                                <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
+                            </svg>
+                        </button>
+                        <button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-repeat" viewBox="0 0 16 16">
+                                <path d="M11 5.466V4H5a4 4 0 0 0-3.584 5.777.5.5 0 1 1-.896.446A5 5 0 0 1 5 3h6V1.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384l-2.36 1.966a.25.25 0 0 1-.41-.192Zm3.81.086a.5.5 0 0 1 .67.225A5 5 0 0 1 11 13H5v1.466a.25.25 0 0 1-.41.192l-2.36-1.966a.25.25 0 0 1 0-.384l2.36-1.966a.25.25 0 0 1 .41.192V12h6a4 4 0 0 0 3.585-5.777.5.5 0 0 1 .225-.67Z" />
+                            </svg>
+                        </button>
+                        <button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+                            </svg>
+                            @@post.Likes
+                        </button>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
