feat: add register todo: fix register api call in usercontroller

--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -149,9 +149,7 @@
         color: #FFF;
         text-align: center;
         font-size: 14px;
-        font-style: normal;
         font-weight: 700;
-        line-height: normal;
         cursor: pointer;
     }
 
@@ -200,7 +198,6 @@
     #email {
         height: 100%;
         width: 100%;
-        border-radius: 20px;
         border: none;
         padding-left: 20px;
         font-size: 20px;
@@ -222,7 +219,7 @@
         font-family: Outfit;
         display: flex;
         color: #1358E3;
-        font-size: 36px;
+        font-size: 32px;
         width: 16%;
         height: 100%;
         text-align: center;
@@ -245,7 +242,6 @@
     #password {
         height: 100%;
         width: 100%;
-        border-radius: 20px;
         border: none;
         padding-left: 20px;
         font-size: 20px;
@@ -259,10 +255,12 @@
         }
 
     .password-login-span {
-        position: relative;
+        display:flex;
+        height: 100%;
         width: 16%;
-        left: 4%;
-        top: 32%;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
         border-left: 4px #4D4D4E;
     }
 
