--- a/Views/Post/Post.cshtml
+++ b/Views/Post/Post.cshtml
@@ -94,7 +94,7 @@
                                 <div class="post-content--data">
                                     <div class="username">
                                         <h2>@post.UserName •</h2>
-                                        <h3>@@User</h3> <!-- Exemplo de uso do objeto UserModel -->
+                                        <h3>@@User</h3>
                                     </div>
                                     <div class="post-content">
                                         <p>@post.MessagePost</p>
